<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cw18555051201419.IntroActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/flag_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/c1" />

        <TextView
            android:id="@+id/coffee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strCoffeeName" />

        <TextView
            android:id="@+id/coffee_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strCoffeePrice" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baht" />

    </LinearLayout>

</LinearLayout>
